<resources>
    <string name="app_name">HelloWorld</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="RegisterHere">Register Here</string>
    <string name="Login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="CarType">Car Type</string>
    <string name="register">Register</string>
    <string name="UpdateProfile">Update Profile</string>
    <string name="Station1">Station 1</string>
    <string name="open">Open</string>
    <string name="Station2">Station 2</string>
    <string name="Station3">Station 3</string>
    <string name="logout">Logout</string>
    <string name="LoginStation">Login to Station</string>
    <string name="refresh">Refresh</string>
    <string name="Station4">Station 4</string>
    <string name="notCharging">Not Charging</string>
    <string name="loading">Loading</string>
    <string name="oldPassword">Old Password</string>
    <string name="oldEmail">Old Email</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="MessageRequest">Message Request</string>
    <string name="sendMessage">Send</string>

</resources>