<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.matt.myapplication.HomeScreenActivity"
    android:background="@drawable/backgroundtest3">

    <TextView
        android:id="@+id/hStation1"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="34dp"
        android:text="@string/Station1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/hLogin1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hStation2"
        android:layout_width="128dp"
        android:layout_height="28dp"
        android:layout_marginTop="34dp"
        android:text="@string/Station2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hStatus1" />

    <TextView
        android:id="@+id/hStation3"
        android:layout_width="128dp"
        android:layout_height="29dp"
        android:layout_marginTop="34dp"
        android:text="@string/Station3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hStatus2" />

    <ProgressBar
        android:id="@+id/hStatus1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="131dp"
        android:layout_height="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hStation1" />

    <ProgressBar
        android:id="@+id/hStatus2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="128dp"
        android:layout_height="25dp"
        app:layout_constraintTop_toBottomOf="@+id/hStation2"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ProgressBar
        android:id="@+id/hStatus3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="125dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toBottomOf="@+id/hStation3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="0dp" />

    <TextView
        android:id="@+id/hTimeLeft1"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginTop="-8dp"
        android:text="@string/open"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/hStatus1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hLogin1" />

    <TextView
        android:id="@+id/hTimeLeft2"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:text="@string/open"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/hStatus2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hLogin2" />

    <TextView
        android:id="@+id/hTimeLeft3"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:text="@string/open"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/hStatus3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hLogin3" />

    <Button
        android:id="@+id/hLogin1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/loginbuttongreen"
        app:layout_constraintBaseline_toBaselineOf="@+id/hStation1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/hStatus1"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/hLogin2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/loginbuttongreen"
        app:layout_constraintBaseline_toBaselineOf="@+id/hStation2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/hStation2"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/hLogin3"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/loginbuttongreen"
        app:layout_constraintBaseline_toBaselineOf="@+id/hStation3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/hStation3"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/hLogOut"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/hUpdate"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/logoutbuttonhome"/>

    <Button
        android:id="@+id/hUpdate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/hLogOut"
        android:background="@drawable/updatebutton"/>

    <Button
        android:id="@+id/hRefresh"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/hLogOut"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        android:background="@drawable/reloadbutton"/>

    <Button
        android:id="@+id/hLogin4"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/loginbuttongreen"
        app:layout_constraintBaseline_toBaselineOf="@+id/hStation4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/hStation4"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/hStation4"
        android:layout_width="128dp"
        android:layout_height="30dp"
        android:layout_marginTop="34dp"
        android:text="@string/Station4"
        app:layout_constraintTop_toBottomOf="@+id/hStatus3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="0dp" />

    <ProgressBar
        android:id="@+id/hStatus4"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="123dp"
        android:layout_height="32dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/hStation4"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/hTimeLeft4"
        android:layout_width="253dp"
        android:layout_height="34dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/open"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/hStatus4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hLogin4"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="334dp" />

</android.support.constraint.ConstraintLayout>
